--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,22 +1,71 @@
 .hero-section {
-  padding: 200px 0;
+  padding-top: 128px;
   background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url("../images/img-min-2.jpg");
+    url("../images/hero-img-mob.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  max-width: 1600px;
+  max-width: 480px;
   margin: 0 auto;
+  height: 400px;
+  display: block;
+  @media screen and (min-width: 480px) {
+    max-width: 480px;
+    background-size: cover;
+      @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+        background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url("../images/hero-img-mob-2x.jpg");
+      }
 }
+  
+  @media screen and (min-width: 768px) {
+    max-width:768px;
+    background:linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url("../images/hero-img-tab.jpg");
+      @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+        background:linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url("../images/hero-img-tab-2x.jpg");
+      }
+    }
+  @media screen and (min-width: 1200px) {
+    max-width: 1600px;
+    min-height: 600px;
+    background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url("../images/img-min-hero.jpg");
+    background-repeat: no-repeat;
+    padding-top:0;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+      background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+  url("../images/hero-img-desctop-2x.jpg");
+    }
+  }
+}
+
 .hero-section__title {
-  @include font(900, 44px, 1.36, 0.06em);
+  @include font(900, 26px, 1.6, 0.06em);
   text-transform: uppercase;
   color: $primary-white-color;
-  max-width: 696px;
-  height: 120px;
   text-align: center;
   margin: 0 auto;
-  margin-bottom: 30px;
+  @media screen and (min-width: 768px) {
+    width: 360px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    @include font(700, 44px, 1.4, 0.06em);
+    width: 696px;
+    height: 120px;
+  }
 }
 .hero-section__button {
   border: 2px;
@@ -31,6 +80,7 @@
   padding: 10px 30px;
   display: block;
   margin: 0 auto;
+  margin-top: 30px;
 
   transition-property: color, background-color, box-shadow;
   @include cubic-bezier;
@@ -39,5 +89,8 @@
   &:hover {
     color: greenyellow;
     background-color: $bg-hover-button;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-top: 40px;
   }
 }
