--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,3 +11,5 @@
 @import "./components/modal";
 @import "./components/portfolio-butoon";
 @import "./components/card-section";
+@import "./components/header-mobile-menu";
+@import "./components/portfolio";
