--- a/sass/utils/_normalise.scss
+++ b/sass/utils/_normalise.scss
@@ -49,6 +49,20 @@ button {
   margin-left: -1;
 }
 
+// .container.container--add-width{
+//   width: 100%;
+//   padding-left: 15px;
+//   padding-right: 15px;
+//   @media screen and (min-width: 768px) {
+//     width: 768px;
+//   }
+//   @media screen and (min-width: 1200px) {
+//     width: 1200px;
+//     padding: 0;
+    
+//   }
+// }
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 html {
   line-height: 1.15;
