--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -3,15 +3,39 @@
   background-color: $footer-color;
 }
 .foooter-box {
-  display: flex;
-  max-width: 1600px;
+  width: 100%;
   background-color: $footer-color;
   margin: 0 auto;
   padding: 60px 0;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+        
+  }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+    display: flex;
+    flex-wrap: wrap;
+        
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+    display: flex;
+        
+  }
 }
 .footer-container {
-  margin-left: 215px;
-  max-width: 231px;
+  text-align: center;
+  width: 100%;
+  padding-bottom: 60px;
+  @media screen and (min-width: 768px) {
+    width: calc(100% / 2);
+    
+  }
+  @media screen and (min-width: 1200px) {
+    width: auto;
+    padding: 0;
+    text-align: start;
+  }
 }
 .footer .logo {
   text-decoration: none;
@@ -44,16 +68,25 @@
     margin-bottom: 9px;
   }
 }
-
 .studio-span {
   color: var(--primary-white-color);
 }
 .footer-icon-conteiner {
-  display: flex;
-  align-content: stretch;
-  flex-direction: column;
-  justify-content: center;
-  padding-left: 70px;
+  text-align: center;
+  width: 100%;
+  padding-bottom: 60px;
+  @media screen and (min-width: 768px) {
+    width: calc(100% / 2);
+    
+  }
+  @media screen and (min-width: 1200px) {
+    width: auto;
+    padding: 0;
+    text-align: start;
+    justify-content: flex-start;
+    margin-left: auto;
+    
+  }
 }
 .footer-icon-title {
   @include font(700, 14px, 1.14, 0.03em);
@@ -61,29 +94,53 @@
   color: $primary-white-color;
   margin-bottom: 20px;
 }
+.list-icons--add-style{
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  justify-content: flex-start;
+    
+  }
+}
 .footer-bg {
   background: rgba(255, 255, 255, 0.1);
 }
-
 .footer-input-container {
-  padding-left: 93px;
+  text-align: center;
+  padding: 15px;
+  @media screen and (min-width: 768px) {
+    width: 100%;
+    
+  }
+  @media screen and (min-width: 1200px) {
+    width: auto;
+    padding: 0;
+    margin-left: auto;
+  }
 }
-
 .footer-input-title {
   @include font(700, 14px, 1.14, 0.03em);
   text-transform: uppercase;
   color: $primary-white-color;
-  margin-top: 12px;
   margin-bottom: 20px;
   width: 100%;
+  @media screen and (min-width: 1200px) {
+   text-align: start;
+    
+  }
 }
-
 .footer-form {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+ }
 }
-
 .footer-form__input {
-  width: 358px;
+  width: 100%;
+  max-width: 450px;
   height: 50px;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -92,15 +149,18 @@
   border-radius: 4px;
   align-items: center;
   color: rgba(255, 255, 255, 0.6);
-  padding-left: 16px;
   outline: none;
+  margin-bottom: 20px;
   & ::placeholder {
     @include font(400, 16px, 1.25, 0.03em);
     align-items: center;
     color: rgba(255, 255, 255, 0.6);
   }
+  @media screen and (min-width: 1200px) {
+    width: 358px;
+    
+  }
 }
-
 .footer-form__button {
   width: 200px;
   height: 50px;
@@ -114,8 +174,7 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border: none;
   border-radius: 4px;
-  padding-left: 28px;
-  padding-right: 28px;
+  padding: 0 28px;
   transition-property: background-color color fill;
   @include cubic-bezier;
   &:focus,
@@ -124,11 +183,9 @@
     color: greenyellow;
   }
 }
-
 .footer__button-text {
   margin-right: 10px;
 }
-
 .footer__button-icon {
   fill: white;
   margin: 0 auto;
