--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -3,32 +3,75 @@ header {
 }
 .header-container {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  max-width: 1200px;
   height: 80px;
   margin: 0 auto;
+  width: 100%;
+  padding-left: 15px;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+    padding-right: 23px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+    justify-content: space-between;
+    padding-right: 15px;
+    
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
-.header-nav,
+.header-nav {
+  display: none;
+  align-items: center;
+  height: 100%;
+  @media screen and (min-width: 768px) {
+    display: block;
+  }
+}
 .header-list {
   display: flex;
   align-items: center;
   height: 100%;
 }
-
 .logo {
   text-decoration: none;
   font-family: Raleway;
-  color: var(--title-text-color);
+  color: $title-text-color;
   font-size: 26px;
   line-height: 1.42;
   letter-spacing: 0.03em;
-  margin-right: 93px;
-  display: flex;
-  align-items: center;
 }
 .logo-web {
   color: $accent-color;
+}
+.button-container {
+  width: 100%;
+  height: 16px;
+  display: flex;
+  justify-content: flex-end;
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
+.mobile-open-icon {
+  @include cubic-bezier;
+  .mobile-menu-open:hover & {
+    fill: $accent-color;
+  }
+}
+.mobile-menu-open {
+  border: none;
+  background-color: transparent;
+}
+.header-list li {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  &:last-child .header-list__link {
+    margin-right: 0;
+  }
 }
 
 .header-list__link {
@@ -38,24 +81,15 @@ header {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: $title-text-color;
-  display: inline-block;
   margin-right: 50px;
   transition-property: fill color;
-  @include cubic-bezier;
-
-  &:hover,
-  &:focus {
-    color: $accent-color;
-  }
-}
-
-.header-list li {
   height: 100%;
   display: flex;
   align-items: center;
-
-  &:last-child .header-list__link {
-    margin-right: 0;
+  @include cubic-bezier;
+  &:hover,
+  &:focus {
+    color: $accent-color;
   }
 }
 
@@ -73,36 +107,58 @@ header {
   }
 }
 
-.header-list__link {
-  height: 100%;
-  display: flex;
-  align-items: center;
-}
-/*contacts*/
-
 .header-contacts {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  justify-content: flex-end;
+  display: none;
+  @media screen and (min-width: 768px) {
+    display: block;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
+  & li {
+    display: flex;
+  }
 }
 
-.header-contacts__mail,
+.header-contacts__mail {
+  // margin-right: 30px;
+  @extend .header-contacts__tell;
+  &:hover {
+    color: $accent-color;
+  }
+  &:focus {
+    color: $accent-color;
+  }
+  @media screen and (min-width: 768px) {
+    margin-bottom: 10px;
+    @include font(500, 12px, 1.14, 0.02em);
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 30px;
+    margin-bottom: 0;
+    @include font(500, 14px, 1.16, 0.02em);
+  }
+}
+
 .header-contacts__tell {
   text-decoration: none;
-  @include font(500, 14px, 1.14, 0.02em);
   font-style: normal;
   align-items: center;
-  margin-right: 0;
-  color: $primary-text-color;
-  margin-left: 50px;
   display: flex;
-}
-.header-contacts__mail:hover {
-  color: $accent-color;
-}
-.header-contacts__tell:hover {
-  color: $accent-color;
+  color: $primary-text-color;
+  &:hover {
+    color: $accent-color;
+  }
+  &:focus {
+    color: $accent-color;
+  }
+  @media screen and (min-width: 768px) {
+    @include font(500, 12px, 1.14, 0.02em);
+  }
+  @media screen and (min-width: 1200px) {
+    @include font(500, 14px, 1.16, 0.02em);
+  }
 }
 
 .header-contacts__phone {
@@ -111,12 +167,17 @@ header {
   .header-contacts__tell:hover & {
     fill: $accent-color;
   }
+  .header-contacts__tell:focus & {
+    fill: $accent-color;
+  }
 }
-
 .header-contacts__convert {
   fill: $primary-text-color;
   margin-right: 10px;
   .header-contacts__mail:hover & {
+    fill: $accent-color;
+  }
+  .header-contacts__mail:focus & {
     fill: $accent-color;
   }
 }
