--- a/sass/components/_qualities.scss
+++ b/sass/components/_qualities.scss
@@ -1,20 +1,46 @@
+.our-qualities-container {
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 15px;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+    // padding:15px;
+    margin: 0 auto;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+    padding: 0;
+    margin: 0 auto;
+  }
+}
 .our-qualities {
-  display: flex;
-  justify-content: space-between;
+ justify-content: space-between;
   margin-bottom: 30px;
   & :last-child {
     margin-right: 0;
   }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+    display: flex;
+    
+  }
 }
-.our-qualities__icon-li {
+
+.our-qualities__icon {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 270px;
+  width: 100%;
   height: 120px;
   background-color: $color-portfolio-button;
-  margin-right: 30px;
-  width: calc((100% - 90px) / 4);
+  margin-bottom: 30px;
 }
 .our-qualities__svg {
   width: 70px;
@@ -26,27 +52,27 @@
 }
 
 .our-qualities__box {
-  min-width: 270px;
   height: auto;
-  margin-right: 30px;
+  margin-bottom: 30px;
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 60px) / 2);
+   }
+  @media screen and (min-width: 1200px) {
+    margin-right: 30px;
   width: calc((100% - 90px) / 4);
+  }
 }
 .our-qualities-list :last-child {
   margin-right: 0;
 }
-/*скрывае заголовок наши качества*/
-.visuali-hiden {
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  opacity: 0;
-  margin-left: -1;
-}
-
 .our-qualities__title {
   @include font(700, 14px, 1.4, 0.03em);
   text-transform: uppercase;
   margin-bottom: 10px;
+  text-align: center;
+  @media screen and (min-width: 1200px) {
+   text-align: start;
+  }
 }
 .our-qualities__text {
   @include font(400, 14px, 1.7, 0.03em);
